# distill-anything

./: .gitignore  CLAUDE.md  devbox.json  docker-compose.yml  project-index.yaml
.claude/skills/: softdev-dev-loop-profile.md  softdev-north-star-template.md
client/: pubspec.yaml
client/android/: local.properties
client/android/app/: build.gradle.kts
client/ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
client/ios/Runner/: GeneratedPluginRegistrant.m
client/lib/: app.dart  main.dart
client/lib/models/: event.dart  recording_state.dart  server_config.dart
client/lib/providers/: event_provider.dart  recording_provider.dart  settings_provider.dart  upload_provider.dart
client/lib/screens/: event_history_screen.dart  home_screen.dart  settings_screen.dart  text_input_screen.dart
client/lib/services/: audio_recording_service.dart  checksum_service.dart  (+8 more)
server/: Dockerfile  pyproject.toml
server/src/distill_anything/: __init__.py  config.py  main.py
server/src/distill_anything/api/: events.py  health.py  knowledge_base.py
server/src/distill_anything/knowledge_base/: topic_manager.py  writer.py
server/src/distill_anything/models/: __init__.py  event.py  processing.py
server/src/distill_anything/services/: checksum.py  database.py  image_description.py  processing_worker.py  storage.py  timeline.py  topic_aggregation.py  transcription.py  video_extraction.py
server/tests/: conftest.py  test_checksum.py  test_events_api.py  test_knowledge_base.py  test_models.py  test_processing.py  test_storage.py  test_timeline.py
(+13 files in other folders)
